--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Static Assets support for Waibu",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-doc": "jsdoc -c .jsdoc.conf.json",
+    "test": "mocha"
   },
   "type": "module",
   "bajo": {
@@ -30,5 +31,8 @@
     "url": "https://github.com/ardhi/waibu-static/issues"
   },
   "homepage": "https://github.com/ardhi/waibu-static#readme",
-  "dependencies": {}
+  "devDependencies": {
+    "clean-jsdoc-theme": "^4.3.0",
+    "jsdoc-plugin-intersection": "^1.0.4"
+  }
 }
